--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/365fd364ef.js" crossorigin="anonymous"></script>
-    <title>Renzo Alvarez</title>
+    <title>Renzo Alvarez | Desarrollador web</title>
 </head>
 <body>
     <div class="container">
@@ -39,7 +39,7 @@
                     <img src="imgprincipal.jpg" alt="RenzoAlvarez" width="175px">
                 </div>
                 <div class="info-perfil">
-                    <h1>Renzo Alvarez Arevalo</h1>
+                    <h1>Renzo Álvarez Arevalo</h1>
                     <p class="save">Desarrollador Web - FrontEnd</p>
                 </div>
                 <div class="redes-sociales">
