--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
         <div class="hamburguer-box"></div>
     </div>
     <ul class="menu">
-        <li><a class="menu-a" href="#inicio">Inicio</a></li>
-        <li><a class="menu-a" href="#acerca">Acerca</a></li>
-        <li><a class="menu-a" href="#habilidades">Habilidades</a></li>
-        <li><a class="menu-a" href="#trabajos">Trabajos</a></li>
-        <li><a class="menu-a" href="#servicios">Servicios</a></li>
-        <li><a class="menu-a" href="#contacto">Contacto</a></li>
+        <li><a class="menu-a" href="#inicio"><i class="fas fa-house-user"></i>Inicio</a></li>
+        <li><a class="menu-a" href="#acerca"><i class="fas fa-address-card"></i>Acerca</a></li>
+        <li><a class="menu-a" href="#habilidades"><i class="fas fa-book"></i>Habilidades</a></li>
+        <li><a class="menu-a" href="#trabajos"><i class="fas fa-laptop-house"></i>Trabajos</a></li>
+        <li><a class="menu-a" href="#servicios"><i class="fas fa-file-invoice-dollar"></i>Servicios</a></li>
+        <li><a class="menu-a" href="#contacto"><i class="fas fa-id-card"></i>Contacto</a></li>
     </ul>
     <ul class="menu-desktop">
-        <li><a class="menu-desktop_a" href="#inicio">Inicio</a></li>
-        <li><a class="menu-desktop_a" href="#acerca">Acerca</a></li>
-        <li><a class="menu-desktop_a" href="#habilidades">Habilidades</a></li>
-        <li><a class="menu-desktop_a" href="#trabajos">Trabajos</a></li>
-        <li><a class="menu-desktop_a" href="#servicios">Servicios</a></li>
-        <li><a class="menu-desktop_a" href="#contacto">Contacto</a></li>
+        <li><a class="menu-desktop_a" href="#inicio"><i class="fas fa-house-user"></i>Inicio</a></li>
+        <li><a class="menu-desktop_a" href="#acerca"><i class="fas fa-address-card"></i>Acerca</a></li>
+        <li><a class="menu-desktop_a" href="#habilidades"><i class="fas fa-book"></i>Habilidades</a></li>
+        <li><a class="menu-desktop_a" href="#trabajos"><i class="fas fa-laptop-house"></i>Trabajos</a></li>
+        <li><a class="menu-desktop_a" href="#servicios"><i class="fas fa-file-invoice-dollar"></i>Servicios</a></li>
+        <li><a class="menu-desktop_a" href="#contacto"><i class="fas fa-id-card"></i>Contacto</a></li>
     </ul>        
     </nav>
     <div class="content">
@@ -57,7 +57,7 @@
         <div class="seccion animado sobremi" id="sobremi">
             <h2 id="acerca">Sobre Mi</h2>
             <div class="sobremi-svg">
-                <img src="images/homeoffice.png" alt="HomeOffice">
+                <img src="images/homeofficecolor.png" alt="HomeOffice">
             </div>
             <div class="sobremi-info">
                 <p>¡Hola! Soy <span>Renzo</span>, un estudiante de Desarrollo Web autonomo por conviccion de Perú, apasionado del mundo de la tecnologia. Te invito a recorrer las tecnologias que trabajo y en que proyectos aplico cada una de ellas. Siempre buscando mejorar dia a dia.
