--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
         </div>
         <div class="seccion animado" >
             <h2 id="servicios">Servicios</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam aliquam natus voluptatem assumenda a vero, excepturi repudiandae maxime dicta mollitia consectetur, vitae amet illum nobis voluptatum. In possimus reprehenderit repellat?</p>
         </div>
         <div class="seccion animado">
             <h2 id="contacto">Contacto</h2>
